--- a/src/sys-user/getproduct-page/get-product.scss
+++ b/src/sys-user/getproduct-page/get-product.scss
@@ -110,6 +110,15 @@ main {
                             font-size: .9rem;
                         }
                     }
+
+                    .descrip, .size {
+                        textarea, input {
+                            width: 100%;
+                            padding: 5px;
+                            font-family: $font-family;
+                            resize: none;
+                        }
+                    }
                 }
             }
 
