--- a/src/sys-user/customization-page/userCustomization.scss
+++ b/src/sys-user/customization-page/userCustomization.scss
@@ -98,7 +98,7 @@ main {
                     width: 300px;
                     height: 300px;
                     background-color: $white-color;
-                    border: 3px solid $header-color;
+                    border: 2px solid $header-color;
                     border-radius: 20px;
                     @include flexBox();
                     justify-content: center;
@@ -117,6 +117,14 @@ main {
                         width: 200px;
                         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
                         border-radius: 3px;
+                    }
+                }
+
+                .dead {
+                    opacity: 50%;
+
+                    &:hover {
+                        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
                     }
                 }
             }
