--- a/src/style/style.css
+++ b/src/style/style.css
@@ -560,9 +560,8 @@ header nav .dropdown:hover .dropbtn {
   flex-wrap: wrap;
 }
 #customization .custo-content .custo-img img {
-  border: 1px solid #a8896c;
   border-radius: 10px 40px 10px 40px;
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 #customization .custo-content .custo-desc {
   width: 500px;
@@ -570,6 +569,58 @@ header nav .dropdown:hover .dropbtn {
 #customization .custo-content .custo-desc p {
   letter-spacing: 2px;
   line-height: 2.5;
+}
+
+#contact-us {
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1066%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M655 524L-375 523' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M706 84L-239 83' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M64 99L-801 98' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1044 18L1415 17' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1310 136L437 135' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1032 400L1811 399' stroke-width='10' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1327 518L1694 517' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1139 351L1981 350' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1191 455L126 454' stroke-width='10' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M586 37L103 36' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1393 331L661 330' stroke-width='10' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M931 476L134 475' stroke-width='8' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M989 270L304 269' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M719 356L1325 355' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1066'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='100%25' y1='0%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1067'%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='0%25' y1='0%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1068'%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
+  background-attachment: fixed;
+  background-size: cover;
+}
+#contact-us h1 {
+  margin-top: 30px;
+  font-size: 2.5rem;
+  color: #a8896c;
+  font-weight: 800;
+}
+#contact-us .au-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  width: 80%;
+  height: 400px;
+}
+#contact-us .au-content .contact-info {
+  width: 450px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+#contact-us .au-content .contact-info .infor {
+  width: 210px;
+  height: 200px;
+  margin: 10px 10px 0 0;
+  text-align: center;
+  background-color: #ffffff;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+#contact-us .au-content .contact-info .infor img {
+  margin-top: 20px;
+  padding: 3px;
+  border: 3px solid #a8896c;
+  border-radius: 50%;
+}
+#contact-us .au-content .contact-info .infor h4 {
+  color: #a8896c;
+}
+#contact-us .au-content .contact-info .infor p {
+  font-size: 0.8rem;
 }
 
 footer {
@@ -702,6 +753,39 @@ footer section p a:hover {
     font-size: 0.8rem;
     line-height: 1.5;
     margin: 10px 10px;
+  }
+  #contact-us {
+    width: 100%;
+  }
+  #contact-us h1 {
+    font-size: 2rem;
+  }
+  #contact-us .au-content {
+    width: 100%;
+  }
+  #contact-us .au-content .contact-info {
+    width: 100%;
+    margin-left: 9px;
+  }
+  #contact-us .au-content .contact-info .infor {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 160px;
+  }
+  #contact-us .au-content .contact-info .infor img {
+    width: 50px;
+    margin-top: 0;
+  }
+  #contact-us .au-content .contact-info .infor h4 {
+    font-size: 0.8rem;
+    margin-top: 10px;
+  }
+  #contact-us .au-content .contact-info .infor p {
+    width: 90%;
+    font-size: 0.5rem;
   }
 }
 @media (min-width: 576px) and (max-width: 767px) {
