--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -370,9 +370,8 @@
         flex-wrap: wrap;
         .custo-img {
             img {
-                border: 1px solid $header-color;
                 border-radius: 10px 40px 10px 40px;
-                box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+                box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
             }
         }
 
@@ -385,8 +384,62 @@
             }
         }
     }
+}
 
+#contact-us {
+    @include screen-size();
+    @include flexBox();
+    flex-direction: column;
 
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1066%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M655 524L-375 523' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M706 84L-239 83' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M64 99L-801 98' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1044 18L1415 17' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1310 136L437 135' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1032 400L1811 399' stroke-width='10' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1327 518L1694 517' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1139 351L1981 350' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1191 455L126 454' stroke-width='10' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M586 37L103 36' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1393 331L661 330' stroke-width='10' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M931 476L134 475' stroke-width='8' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M989 270L304 269' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M719 356L1325 355' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1066'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='100%25' y1='0%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1067'%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='0%25' y1='0%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1068'%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
+    background-attachment: fixed;
+    background-size: cover;
+
+    h1 {
+        margin-top: 30px;
+        font-size: 2.5rem;
+        color: $header-color;
+        font-weight: 800;
+    }
+
+    .au-content {
+        @include flexBox();
+        justify-content: center;
+        margin-top: 10px;
+        width: 80%;
+        height: 400px;
+        
+        .contact-info {
+            width: 450px;
+            @include flexBox();
+            justify-content: center;
+            flex-wrap: wrap;
+
+            .infor {
+                width: 210px;
+                height: 200px;
+                margin: 10px 10px 0 0;
+                text-align: center;
+                background-color: $white-color;
+                box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+
+                img {
+                    margin-top: 20px;
+                    padding: 3px;
+                    border: 3px solid $header-color;
+                    border-radius: 50%;
+                }
+
+                h4 {
+                    color: $header-color;
+                }
+
+                p {
+                    font-size: .8rem;
+                }
+            }
+        }
+    }
 }
 
 footer {
@@ -573,6 +626,48 @@ footer {
             }
         
         
+        }
+    }
+
+    #contact-us {
+        width: 100%;
+    
+        h1 {
+            font-size: 2rem;
+        }
+    
+        .au-content {
+            width: 100%;
+
+            .contact-info {
+                width: 100%;
+                margin-left: 9px;
+    
+                .infor {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    width: 150px;
+                    height: 160px;
+                    
+
+                    img {
+                        width: 50px;
+                        margin-top: 0;
+                    }
+    
+                    h4 {
+                        font-size: .8rem;
+                        margin-top: 10px;
+                    }
+    
+                    p {
+                        width: 90%;
+                        font-size: .5rem;
+                    }
+                }
+            }
         }
     }
 }
