--- a/src/sys-user/customization-page/userCustomization.scss
+++ b/src/sys-user/customization-page/userCustomization.scss
@@ -202,6 +202,16 @@ main {
                             padding: 4px 22px;
                             margin: auto;
                         }
+
+                        .place-order {
+                            width: 100%;
+                            @include flexBox();
+                            justify-content: center;
+
+                            text-decoration: none;
+                            color: $white-color;
+                            background-color: $header-color;
+                        }
                     }
                 }
             }
