--- a/src/sys-admin/feed-profile-page/adminProfile.css
+++ b/src/sys-admin/feed-profile-page/adminProfile.css
@@ -278,6 +278,7 @@ main .container .post-cont .category input[type=submit] {
   color: #ffffff;
   border: none;
   cursor: pointer;
+  transition: 0.3s;
 }
 main .container .post-cont .category input[type=submit]:hover {
   opacity: 80%;
@@ -389,6 +390,112 @@ main .container .post-cont .user-post-cont .user-post .comment-send button {
 }
 main .container .post-cont .user-post-cont .user-post .comment-send button:hover {
   opacity: 80%;
+}
+main .container .post-cont .user-post-cont .trans-tally {
+  width: 99%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+main .container .post-cont .user-post-cont .trans-tally .tally-cont {
+  display: flex;
+  height: 98px;
+  width: 48%;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
+main .container .post-cont .user-post-cont .trans-tally .tally-cont .tally-text {
+  width: 70%;
+}
+main .container .post-cont .user-post-cont .trans-tally .tally-cont .tally-text div {
+  width: 100%;
+}
+main .container .post-cont .user-post-cont .trans-tally .tally-cont .tally-text div h5 {
+  margin: 5px;
+  font-weight: 400;
+}
+main .container .post-cont .user-post-cont .trans-tally .tally-cont .tally-text .res {
+  width: 100%;
+  height: 50px;
+  text-align: center;
+}
+main .container .post-cont .user-post-cont .trans-tally .tally-cont .tally-text .res h1 {
+  font-size: 40px;
+}
+main .container .post-cont .user-post-cont .trans-tally .tally-cont .tally-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 28%;
+}
+main .container .post-cont .user-post-cont .trans-tally .tally-cont .tally-icon img {
+  opacity: 30%;
+}
+main .container .post-cont .user-post-cont .total-sale {
+  width: 99%;
+  height: 30px;
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+}
+main .container .post-cont .user-post-cont .total-sale .total-sale-desc {
+  width: 75%;
+}
+main .container .post-cont .user-post-cont .total-sale .total-sale-res {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  width: 24%;
+}
+main .container .post-cont .user-post-cont .trans-table {
+  margin-top: 20px;
+  width: 99%;
+  height: 45vh;
+}
+main .container .post-cont .user-post-cont .trans-table table {
+  width: 100%;
+  overflow-y: scroll;
+}
+main .container .post-cont .user-post-cont .trans-table table::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .post-cont .user-post-cont .trans-table table::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .post-cont .user-post-cont .trans-table table::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .post-cont .user-post-cont .trans-table table::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .post-cont .user-post-cont .trans-table table::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
+}
+main .container .post-cont .user-post-cont .trans-table table .table-data {
+  transition: 0.5s;
+}
+main .container .post-cont .user-post-cont .trans-table table .table-data:hover {
+  background-color: #d9dddc;
+}
+main .container .post-cont .user-post-cont .trans-table table tr {
+  font-size: 0.8rem;
+  text-align: center;
+}
+main .container .post-cont .user-post-cont .trans-table table tr th {
+  color: #ffffff;
+  background-color: #a8896c;
+  font-weight: 500;
+  padding: 3px 0;
+  border-collapse: collapse;
+}
+main .container .post-cont .user-post-cont .trans-table table tr td {
+  padding: 5px 0;
+  border-bottom: 1px solid #a8896c;
 }
 main .container .shopinfo-cont {
   width: 380px;
