--- a/src/sys-admin/feed-profile-page/adminProfile.scss
+++ b/src/sys-admin/feed-profile-page/adminProfile.scss
@@ -72,6 +72,7 @@ main {
                     color: $white-color;
                     border: none;
                     cursor: pointer;
+                    transition: 0.3s;
 
                     &:hover {
                         opacity: 80%;
@@ -185,6 +186,110 @@ main {
                     }
                 }
 
+                .trans-tally {
+                    width: 99%;
+                    height: 100px;
+                    @include flexBox();
+                    justify-content: space-evenly;
+
+                    .tally-cont {
+                        display: flex;
+                        height: 98px;
+                        width: 48%;
+                        box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+
+                        .tally-text {
+                            width: 70%;
+                            div {
+                                width: 100%;
+    
+                                h5 {
+                                    margin: 5px;
+                                    font-weight: 400;
+                                }
+                            }
+                            .res {
+                                width: 100%;
+                                height: 50px;
+                                text-align: center;
+
+                                h1 {
+                                    font-size: 40px;
+                                }
+                            }
+                        }
+
+                        .tally-icon {
+                            @include flexBox();
+                            justify-content: center;
+                            width: 28%;
+
+                            img {
+                                opacity: 30%;
+                            }
+                        }
+
+                        
+                    }
+                }
+
+                .total-sale {
+                    width: 99%;
+                    height: 30px;
+                    margin-top: 15px;
+                    @include flexBox();
+
+                    .total-sale-desc {
+                        width: 75%;
+                    }
+
+                    .total-sale-res {
+                        @include flexBox();
+                        justify-content: end;
+                        width: 24%;
+                    }
+                }
+
+                .trans-table {
+                    margin-top: 20px;
+                    width: 99%;
+                    height: 45vh;
+
+                    table {
+                        width: 100%;
+                        overflow-y: scroll;
+                        @include scroll();
+
+                        .table-data {
+                            transition: 0.5s;
+                            &:hover {
+                                background-color: #d9dddc;
+                            }
+                        }
+
+                        tr {
+                            font-size: .8rem;
+                            text-align: center;
+
+
+
+                            th {
+                                color: $white-color;
+                                background-color: $header-color;
+                                font-weight: 500;
+                                padding: 3px 0;
+                                border-collapse: collapse;
+                            }
+
+                            td {
+                                padding: 5px 0;
+                                border-bottom: 1px solid $header-color;
+
+                                
+                            }
+                        }
+                    }
+                }
             }
         }
 
